# pydantic-ai-harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/agents/: docs-parity-reviewer.md
.github/workflows/: main.yml
.macroscope/: ignore.md
agent_docs/: capability-authoring.md  review-checklist.md
docs/: acp.md  browser-use.md  cache-stability.md  code-mode.md  compaction.md  context.md  dynamic-workflow.md  filesystem.md  guardrails.md  index.md  managed-prompt.md  media.md  memory.md  modal-sandbox.md  nav.json  overflowing-tool-output.md  planning.md  pydantic-ai-docs.md  runtime-authoring.md  shell.md  step-persistence.md  subagents.md
pydantic_ai_harness/: __init__.py  _monty_exec.py
pydantic_ai_harness/browser_use/: README.md  __init__.py  _capability.py  _model.py  _settings.py  _toolset.py
pydantic_ai_harness/cache_stability/: README.md  __init__.py  _capability.py
pydantic_ai_harness/code_mode/: README.md  _toolset.py
pydantic_ai_harness/compaction/: README.md
pydantic_ai_harness/context/: README.md
pydantic_ai_harness/docs/: README.md
pydantic_ai_harness/dynamic_workflow/: README.md
pydantic_ai_harness/experimental/acp/: README.md  __init__.py  _adapter.py  _client_toolsets.py  _content.py  _permission.py  _presentation.py  _serialize.py  _server.py  _session.py  _store.py
pydantic_ai_harness/experimental/dynamic_workflow/: README.md  __init__.py  _capability.py  _toolset.py
pydantic_ai_harness/experimental/subagents/: README.md  _capability.py  _toolset.py
pydantic_ai_harness/filesystem/: _capability.py  _toolset.py
pydantic_ai_harness/guardrails/: README.md  __init__.py  _capability.py  _exceptions.py
pydantic_ai_harness/logfire/: README.md
pydantic_ai_harness/media/: README.md
pydantic_ai_harness/memory/: README.md  _capability.py  _store.py  _toolset.py
pydantic_ai_harness/modal_sandbox/: README.md  __init__.py  _capability.py  _session.py  _tool_output.py  _toolset.py
pydantic_ai_harness/planning/: README.md  __init__.py  _capability.py  _events.py  _postgres.py  _redis.py  _store.py  _toolset.py  _types.py
pydantic_ai_harness/runtime_authoring/: README.md
pydantic_ai_harness/shell/: _capability.py
pydantic_ai_harness/step_persistence/: README.md
tests/: test_doc_snippets.py  test_docs_parity.py
tests/_guardrails/: test_input_guard.py  test_output_guard.py
tests/browser_use/: conftest.py  test_browser_use.py  test_model.py
tests/cache_stability/: test_cache_stability.py
tests/code_mode/: test_code_mode.py  test_dbos.py  test_temporal.py
tests/experimental/: test_warnings.py
tests/experimental/acp/: _acp_clients.py  _demo_agent.py  _demo_approval_agent.py  _demo_large_agent.py  _demo_models_agent.py  _demo_native_agent.py  _demo_slow_agent.py  _wire.py  conftest.py  test_acp.py  test_client_toolsets.py  test_conformance.py  test_content.py  test_models.py  test_packaging.py  test_persistence.py
tests/experimental/dynamic_workflow/: test_dynamic_workflow.py
tests/experimental/subagents/: test_subagents.py
tests/filesystem/: test_filesystem.py
tests/logfire_variables/: test_managed_prompt.py
tests/memory/: test_memory.py  test_stores.py
tests/modal_sandbox/: conftest.py  fake_modal.py  test_modal_live.py  test_modal_sandbox.py  test_session.py
tests/planning/: test_planning.py  test_postgres.py  test_redis.py  test_stores.py
